# git-check-cli

./: Cargo.toml  README.md  file.example.yaml  go.mod  main.go
.github/: README.md
cmd/: root.go
example/: config.yaml
examples/: file.example.yaml  obj.example
src/: cli.rs  config.rs  exec.go  git.rs  lib.rs  main.rs  process.go
src/cli/: cli.rs  main.rs  mod.rs
src/configs/: setup.go
src/file_mgr/: mod.rs
src/file_tracker/: mod.rs  options.rs  projects.rs  tracker.rs
src/git/: check_diffs.go  checks.go  get_info.go
src/git_tracker/: git_process.rs  mod.rs  process.rs  repo_info.rs  repo_query.rs  repo_result.rs  result.rs  short_result.rs  verbose_result.rs
src/process/: check_diffs.go  check_exist.go  check_local_diffs.go  check_remote_diffs.go  get_info.go  mod.rs
src/result_display/: display.rs  mod.rs  result_display.rs  short_result.rs  verbose_result.rs
src/tracker/: tracker.rs
src/utils/: files.go  strings.go  struct.go
