[package]
name = "git-check-cli"
version = "0.1.0"
edition = "2021"
authors = ["Bruno A. <brunoan99@gmail.com>"]
description = "cli to help check and update git repos"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
