[package]
name = "git-check-cli"
version = "0.1.0"
edition = "2021"
authors = ["Bruno A. <brunoan99@gmail.com>"]
repository = "https://github.com/brunoan99/git-check-cli"
license-file = "LICENSE"
categories = ["command-line-utilities"]
keywords = ["git", "check", "updated"]
description = "cli to help check and update git repos"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mylib"
path = "src/lib.rs"


[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
colored = "2.0.0"
home = "0.5.4"
inquire = "0.6.0"
linked-hash-map = "0.5.6"
yaml-rust = "0.4.5"
